--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -102,9 +102,9 @@
     #rematch-prompt-container{
         margin-bottom: 20px;
     }
-    #rematch-prompt{
+    /* #rematch-prompt{
         font-size: 24px;
-    }
+    } */
     #rematch-true-btn{
         font-size: 20px;
         margin-right: 10px;
@@ -115,9 +115,9 @@
 </style>
 <div id="ttt-prompts-containers">
     <div id="ttt-prompts-placeholder">
-        <div id="rematch-container">
+        <div id="winner-rematch-container">
             <!-- Modal -->
-            <div class="modal fade" id="rematchModal" tabindex="-1" role="dialog" aria-labelledby="rematchModal" aria-hidden="true" data-backdrop="static">
+            <div class="modal fade" id="winnerRematchModal" tabindex="-1" role="dialog" aria-labelledby="rematchModal" aria-hidden="true" data-backdrop="static">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-body center">
@@ -125,6 +125,26 @@
                             <div id="winner-player-container">
                                 <div id="winner-player">Winner</div>
                             </div>
+                            <div id="winner-rematch-prompt-container" class="center">
+                                <div id="winner-rematch-prompt">Rematch</div>
+                            </div>
+                            <div id="winner-rematch-btn-container" class="center">
+                                <button id="winner-rematch-true-btn" class="btn btn-primary mr-5" onclick="rematch(true)">Play Again</button>
+                                <button id="winner-rematch-false-btn" class="btn btn-secondary" onclick="rematch(false)">Exit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div id="rematch-container">
+            <!-- Modal -->
+            <div class="modal fade" id="rematchModal" tabindex="-1" role="dialog" aria-labelledby="rematchModal" aria-hidden="true" data-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-body center">
+                        <div>
                             <div id="rematch-prompt-container" class="center">
                                 <div id="rematch-prompt">Rematch</div>
                             </div>
@@ -283,6 +303,7 @@ function toggleTttPrompts(promptToShow){
     var chooseSymbolContainer=document.getElementById('choose-symbol-prompt-container');
     var setWinnerContainer=document.getElementById('set-winner-container');
     var rematchContainer=document.getElementById('rematch-container');
+    var winnerRematchContainer=document.getElementById('winner-rematch-container');
     var playerDeclinedRematchContainer=document.getElementById('player-declined-rematch-container');
     var searchingForPlayerContainer=document.getElementById('searching-for-player-container');
     var waitPlayerChooseTurnPromptContainer=document.getElementById('wait-player-choose-turn-prompt-container');
@@ -294,7 +315,7 @@ function toggleTttPrompts(promptToShow){
         $('#player-declined-rematch-container').modal('hide');
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
@@ -309,7 +330,7 @@ function toggleTttPrompts(promptToShow){
         $('#player-declined-rematch-container').modal('hide');
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
@@ -322,7 +343,7 @@ function toggleTttPrompts(promptToShow){
         $('#rematchModal').modal('hide');
         $('#player-declined-rematch-container').modal('hide');
         setWinnerContainer.style.display="none";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
@@ -336,7 +357,7 @@ function toggleTttPrompts(promptToShow){
         $('#rematchModal').modal('hide');
         $('#chooseSymbolModal').modal('hide');
         $('#player-declined-rematch-container').modal('hide');
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
@@ -350,7 +371,7 @@ function toggleTttPrompts(promptToShow){
         $('#rematchModal').modal('hide');
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
         playerDeclinedRematchContainer.style.display="none";
@@ -363,7 +384,7 @@ function toggleTttPrompts(promptToShow){
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
         chooseSymbolContainer.style.display="none";
@@ -372,6 +393,8 @@ function toggleTttPrompts(promptToShow){
     else if(promptToShow=='rematchContainer'){
         rematchContainer.style.display="flex";
         $('#rematchModal').modal('show');
+        $('#winnerRematchModal').modal('hide');
+        $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
@@ -380,11 +403,24 @@ function toggleTttPrompts(promptToShow){
         chooseSymbolContainer.style.display="none";
         waitPlayerChooseSymbolContainer.style.display="none";
     }
+    else if(promptToShow=='winnerRematchContainer'){
+        winnerRematchContainer.style.display="flex";
+        $('#winnerRematchModal').modal('show');
+        $('#rematchModal').modal('hide');
+        setWinnerContainer.style.display="none";
+        searchingForPlayerContainer.style.display="none";
+        waitPlayerChooseTurnPromptContainer.style.display="none";
+        playerTurnPromptContainer.style.display="none";
+        playerDeclinedRematchContainer.style.display="none";
+        chooseSymbolContainer.style.display="none";
+        waitPlayerChooseSymbolContainer.style.display="none";
+        rematchContainer.style.display="none";
+    }
     else if(promptToShow=='searchingForPlayerContainer'){
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
         searchingForPlayerContainer.style.display="flex";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerTurnPromptContainer.style.display="none";
         playerDeclinedRematchContainer.style.display="none";
@@ -397,7 +433,7 @@ function toggleTttPrompts(promptToShow){
         $('#rematchModal').modal('hide');
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
-        rematchContainer.style.display="none";
+        winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
         playerDeclinedRematchContainer.style.display="none";
@@ -415,5 +451,3 @@ function toggleTttPrompts(promptToShow){
 <script src="../js/room/tictactoeStartGame.js"></script>
 <script src="../js/room/tictactoeGame.js"></script>
 <script src="../js/room/rematch.js"></script>
-
-
