--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -13,6 +13,18 @@
     position: relative;
     top:0px;
 }
+#winner-rematch-container{
+    width:100vw; height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    top: 0px;
+    font-size: 72px;
+    color:rgb(0, 0, 0);
+}
 #rematch-container{
     width:100vw; height: 100vh;
     display: flex;
@@ -126,6 +138,11 @@
     font-size: 72px;
     color:rgb(9, 255, 0);
 }
+/* rematch styles */
+#rematch-prompt{
+    font-size: 50px;
+}
+/*  */
 #mobile-players-details{
     display:none;
 }
