--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -441,8 +441,6 @@ function toggleTttPrompts(promptToShow){
         waitPlayerChooseSymbolContainer.style.display="none";
     }
 }
-
-
 </script>
 <script src="../js/room/roomSession.js"></script>
 <script src="../js/room/chooseSymbolPromptSession.js"></script>
@@ -451,3 +449,4 @@ function toggleTttPrompts(promptToShow){
 <script src="../js/room/tictactoeStartGame.js"></script>
 <script src="../js/room/tictactoeGame.js"></script>
 <script src="../js/room/rematch.js"></script>
+<script src="../js/room/connection.js"></script>
