refactored game-end code

--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -450,3 +450,4 @@ function toggleTttPrompts(promptToShow){
 <script src="../js/room/tictactoeGame.js"></script>
 <script src="../js/room/rematch.js"></script>
 <script src="../js/room/connection.js"></script>
+<script src="../js/room/tictactoeGameEnd.js"></script>
