tictactoe state added

--- a/public/views/room.ejs
+++ b/public/views/room.ejs
@@ -315,6 +315,7 @@ function toggleTttPrompts(promptToShow){
         $('#player-declined-rematch-container').modal('hide');
         $('#chooseSymbolModal').modal('hide');
         setWinnerContainer.style.display="none";
+        rematchContainer.style.display="none";
         winnerRematchContainer.style.display="none";
         searchingForPlayerContainer.style.display="none";
         waitPlayerChooseTurnPromptContainer.style.display="none";
