--- a/public/css/tictactoe-room.css
+++ b/public/css/tictactoe-room.css
@@ -78,6 +78,29 @@
     font-size: 72px;
     color:rgb(0, 0, 0);
 }
+#opponent-lost-connection-container{
+    width:100vw; height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    top: 0px;
+    color:rgb(0, 0, 0);
+}
+#opponent-lost-connection-title{
+    font-size: 64px;
+}
+#opponent-lost-connection{
+    font-size: 48px;
+}
+#player-declined-rematch-title{
+    font-size: 36px;
+}
+#player-redirect{
+    font-size: 28px;
+}
 #player-declined-rematch-container{
     width:100vw; height: 100vh;
     display: flex;
